[package]
name = "progenitor-macro"
version = "0.11.2"
edition = "2021"
license = "MPL-2.0"
description = "An OpenAPI client generator - macros"
repository = "https://github.com/oxidecomputer/progenitor.git"
readme = "../README.md"

[lib]
proc-macro = true

[features]
default = ["openapi-3-1"]
openapi-3-1 = ["progenitor-impl/openapi-3-1", "dep:openapiv3_1"]

[dependencies]
openapiv3 = "2.2.0"
openapiv3_1 = { path = "../../openapiv3_1_repo/crates/openapiv3_1", features = ["debug"], optional = true }
proc-macro2 = "1.0"
progenitor-impl = { version = "0.11.2", path = "../progenitor-impl", default-features = false }
quote = "1.0"
schemars = "0.8.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_tokenstream = "0.2.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
